--- a/Workspace/topCasaFina-arquitetura/Index.html
+++ b/Workspace/topCasaFina-arquitetura/Index.html
@@ -49,8 +49,41 @@
 		</div>
 
 		<h2>Nossos Projetos</h2>
+
 		<figure class="thumbnail">
 			<img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+			<figcaption class="caption">
+				<h3>Casa Castelo</h3>
+				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+			</figcaption>		
+		</figure>
+
+		<figure class="thumbnail">
+			<img src="img/projetos/casa-lago.png" alt="Foto da Casa Castelo">
+			<figcaption class="caption">
+				<h3>Casa Castelo</h3>
+				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+			</figcaption>		
+		</figure>
+
+		<figure class="thumbnail">
+			<img src="img/projetos/mercado-marapira.png" alt="Foto da Casa Castelo">
+			<figcaption class="caption">
+				<h3>Casa Castelo</h3>
+				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+			</figcaption>		
+		</figure>
+
+		<figure class="thumbnail">
+			<img src="img/projetos/palacio-dionisio.png" alt="Foto da Casa Castelo">
+			<figcaption class="caption">
+				<h3>Casa Castelo</h3>
+				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+			</figcaption>		
+		</figure>
+
+		<figure class="thumbnail">
+			<img src="img/projetos/residencia-ludi.png" alt="Foto da Casa Castelo">
 			<figcaption class="caption">
 				<h3>Casa Castelo</h3>
 				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
