Atualização Html Index

--- a/Workspace/topCasaFina-arquitetura/Index.html
+++ b/Workspace/topCasaFina-arquitetura/Index.html
@@ -9,7 +9,7 @@
 	<title></title>
 </head>
 <body>
-	<div class="container">				
+	<section class="container">				
 		<h2>Sobre Nós</h2>
 		<img class="img-responsive" src="img/empresa.jpg">
 		<div class="panel-group" id=paineis-sobre>
@@ -19,35 +19,45 @@
 				</div>
 				<div id="primeiro-paragrafo"class="collapse">
 					<div class="panel-body">
-						<p >A TopCasaFina esta no mercado</p>
+						<p >Desde 1935 trazendo casas, mansões e prédios lindos para o mundo.</p>
 					</div>
 				</div>			
 			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#segundo-paragrafo" data-parent="#paineis-sobre">Desde 1935</h3>
+					<h3 class="panel-title" data-toggle="collapse" data-target="#segundo-paragrafo" data-parent="#paineis-sobre">Preços acessíveis</h3>
 				</div>
 				<div id="segundo-paragrafo"class="collapse">
 					<div class="panel-body">
-						<p >A TopCasaFina esta no mercado</p>
+						<p >Preços a partir de R$ 1000,00.</p>
 					</div>
 				</div>			
 			</div>
 
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro-paragrafo" data-parent="#paineis-sobre">Desde 1935</h3>
+					<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro-paragrafo" data-parent="#paineis-sobre">Alegria em colaborar para um mundo mais bonito</h3>
 				</div>
 
 				<div id="terceiro-paragrafo"class="collapse">
 					<div class="panel-body">
-						<p >A TopCasaFina esta no mercado</p>
+						<p >Trazendo alegria para a vida das pessoas que tem dinheiro para gastar.</p>
 					</div>
 				</div>			
 			</div>
-		</div>
+		</div>			
+	</section>
 
+	<div class="jumbotron">
+		<div class="container">
+			<h2>Mais de 300 prêmios em design e em conforto.</h2>
+			<p>Mais de 5 milhões de clientes satisfeitos em todo o mundo.</p>
+		</div>		
+	</div>
+	
+
+	<section class="container">
 		<h2>Nossos Projetos</h2>
 
 		<figure class="thumbnail">
@@ -61,23 +71,23 @@
 		<figure class="thumbnail">
 			<img src="img/projetos/casa-lago.png" alt="Foto da Casa Castelo">
 			<figcaption class="caption">
-				<h3>Casa Castelo</h3>
-				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+				<h3>Casa Lago</h3>
+				<p>A Casa do Lago foi lar de inúmeras pessoas que conheciam o presidente da época.</p>	
 			</figcaption>		
 		</figure>
 
 		<figure class="thumbnail">
 			<img src="img/projetos/mercado-marapira.png" alt="Foto da Casa Castelo">
 			<figcaption class="caption">
-				<h3>Casa Castelo</h3>
-				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
+				<h3>Mercado Marapira</h3>
+				<p>O mercado Marapira foi projetado nos mínimos detalhes na arquitetura baseada em frutas.</p>
 			</figcaption>		
 		</figure>
 
 		<figure class="thumbnail">
 			<img src="img/projetos/palacio-dionisio.png" alt="Foto da Casa Castelo">
 			<figcaption class="caption">
-				<h3>Casa Castelo</h3>
+				<h3>Palacio Dionisio</h3>
 				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
 			</figcaption>		
 		</figure>
@@ -85,12 +95,12 @@
 		<figure class="thumbnail">
 			<img src="img/projetos/residencia-ludi.png" alt="Foto da Casa Castelo">
 			<figcaption class="caption">
-				<h3>Casa Castelo</h3>
+				<h3>Residencial Ludi</h3>
 				<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita para um monge.</p>
 			</figcaption>		
 		</figure>
-		
-	</div>
+	</section>
+
 </body>
 <script src="bootstrap/js/jquery.js"></script>
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
