--- a/Workspace/topCasaFina-arquitetura/Index.html
+++ b/Workspace/topCasaFina-arquitetura/Index.html
@@ -15,7 +15,7 @@
 		<div class="panel-group" id=paineis-sobre>
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo" data-parent="#paineis-sobre">Desde 1935</h3>
+					<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo" >Desde 1935</h3>
 				</div>
 				<div id="primeiro-paragrafo"class="collapse">
 					<div class="panel-body">
@@ -30,7 +30,7 @@
 				</div>
 				<div id="segundo-paragrafo"class="collapse">
 					<div class="panel-body">
-						<p >Preços a partir de R$ 1000,00.</p>
+						<p>Preços a partir de R$ 1000,00.</p>
 					</div>
 				</div>			
 			</div>
@@ -100,6 +100,52 @@
 			</figcaption>		
 		</figure>
 	</section>
+
+
+	<!-- Wrapper for slides -->
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1" ></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2" ></li>
+
+		</ol>
+
+		<div class="carousel-inner" role="listbox">
+			<div class="item active">
+				<img src="img/depoimentos/depoimento1.png">
+				<div class="carousel-caption">
+					<h3>Gabriel</h3>
+					<p>Top demais</p>
+				</div>
+			</div>
+			<div class="item">
+				<img src="img/depoimentos/depoimento2.png">
+				<div class="carousel-caption">
+					<h3>Gabriel</h3>
+					<p>Top demais</p>
+				</div>
+			</div>
+			<div class="item">
+				<img src="img/depoimentos/depoimento3.png">
+				<div class="carousel-caption">
+					<h3>Gabriel</h3>
+					<p>Top demais</p>
+				</div>
+			</div>			
+		</div>
+
+		<a class="left caroulsel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="right caroulsel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+
 
 </body>
 <script src="bootstrap/js/jquery.js"></script>
